[gd_scene load_steps=7 format=2]

[ext_resource path="res://tanks/Tank.tscn" type="PackedScene" id=1]
[ext_resource path="res://tanks/Enemy.gd" type="Script" id=2]
[ext_resource path="res://bullets/EnemyBullet.tscn" type="PackedScene" id=3]
[ext_resource path="res://onlyObjects_retina_rotated.png" type="Texture" id=4]
[ext_resource path="res://UI/UnitDisplay.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 39.8535, 34.2869 )

[node name="Enemy" index="0" instance=ExtResource( 1 )]
collision_layer = 4
collision_mask = 3
script = ExtResource( 2 )
Bullet = ExtResource( 3 )
max_speed = 200
rotation_speed = 1.0
gun_cooldown = 0.4
max_health = 50
turret_speed = 1.0
detect_radius = 200

[node name="Body" parent="." index="0"]
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 268, 186, 80, 76 )

[node name="Turret" parent="." index="1"]
texture = ExtResource( 4 )
offset = Vector2( 20, 0 )
region_enabled = true
region_rect = Rect2( 452, 34, 60, 24 )

[node name="Muzzle" parent="Turret" index="0"]
position = Vector2( 55, 0 )

[node name="Flash" parent="Turret" index="1"]
position = Vector2( 60, 0 )
texture = ExtResource( 4 )
offset = Vector2( 25, 0 )
region_rect = Rect2( 644, 94, 50, 40 )

[node name="CollisionShape2D" parent="." index="2"]
shape = SubResource( 1 )

[node name="DetectRadius" type="Area2D" parent="." index="4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectRadius" index="0"]

[node name="LookAhead1" type="RayCast2D" parent="." index="5"]
position = Vector2( 0, -30 )
enabled = true
cast_to = Vector2( 100, 0 )
collision_mask = 7

[node name="LookAhead2" type="RayCast2D" parent="." index="6"]
position = Vector2( 0, 30 )
enabled = true
cast_to = Vector2( 100, 0 )
collision_mask = 7

[node name="UnitDisplay" parent="." index="7" instance=ExtResource( 5 )]

[node name="Explosion" parent="." index="9"]
scale = Vector2( 1, 1 )
[connection signal="health_changed" from="." to="UnitDisplay" method="update_healthbar"]
[connection signal="body_entered" from="DetectRadius" to="." method="_on_DetectRadius_body_entered"]
[connection signal="body_exited" from="DetectRadius" to="." method="_on_DetectRadius_body_exited"]
